--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,7 @@
 - Added support for GEMS BNK and PAT formats. Now it's possible to import and use offical Sega GEMS's patches
 - Added GYB bank format for Nineko's MIDI2VGM converter
 - Added support for instruments import from GYM files
+- Fixed the measurer which was produced zero note length for some cases
 - Added highlighting of piano keys when playing notes via keyboard
 - Clipboard is now global: you can run multiple copies of OPN2-BE and copy instruments between different opened files without of importer usage
 
