--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+1.3.1
+- Added Neko Project 2 Kai OPNA chip emulator
+- Added support for OPNA chip mode
+
 1.3
 - First version where changelog was added first time
 - Added Real-Time MIDI support
