--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,11 @@
 1.3.1
 - Added Neko Project 2 Kai OPNA chip emulator
 - Added support for OPNA chip mode
+- Added an ability to set the audio device by user interface
+- Fixed the look of UI overall
+- Reworked a GYB support with a usage of accurat specification by ValleyBell
+- Added support for importing and exporting between text-based various bank/instrument formats
+- Fixed several bugs
 
 1.3
 - First version where changelog was added first time
