--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+1.3.2
+- Updated GENS chip emulator (thanks to @freq-mod for the help)
+
 1.3.1
 - Added Neko Project 2 Kai OPNA chip emulator
 - Added support for OPNA chip mode
@@ -40,4 +43,3 @@
 - Added supported formats list dialog (can be found in the "Help" menu)
 - Fixed instruments filter
 - etc...
-
