--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 1.3.2
 - Updated GENS chip emulator (thanks to @freq-mod for the help)
+- Fixed the inability of the VGM importer to import some instruments
 
 1.3.1
 - Added Neko Project 2 Kai OPNA chip emulator
